--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,22 +1,21 @@
-<h1>Listing articles</h1>
-<%= link_to 'New article', new_article_path %>
+<div class="blog-header">
+  <h1 class="blog-title text-center">Listing Articles</h1>
+  <p><%= link_to 'New article', new_article_path, class: 'btn btn-success' %></p>
+</div>
 
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Text</th>
-    <th colspan="3"></th>
-  </tr>
- 
+<div class="row">
   <% @articles.each do |article| %>
-    <tr>
-      <td><%= article.title %></td>
-      <td><%= article.text %></td>
-      <td><%= link_to 'Show', article_path(article) %></td>
-      <td><%= link_to 'Edit', edit_article_path(article) %></td>
-       <td><%= link_to 'Destroy', article_path(article),
-              method: :delete,
-              data: { confirm: 'Are you sure?' } %></td>
-    </tr>
+  <div class="col-sm-4 blog-main">
+
+    <div class="blog-post">
+      <h2 class="blog-post-title"><%= article.title %></h2>
+
+      <p class="blog-post-meta"><%= article.created_at.to_s(:created_on) %> by <a href="#">Mark</a></p>
+      <p><%= truncate(article.text, length: 20, omission: '...') %></p>
+      <p><%= link_to 'Read More', article %></p>
+      
+    </div><!-- /.blog-post -->
+  
+  </div>
   <% end %>
-</table>
+</div>
