--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New Article</h1>
+<div class="row">
+  <div class="col-sm-4 col-sm-offset-4">
+    <div class="blog-header">
+        <h1>New Article</h1>
+        </div>
+        <%= render 'form' %>
+    </div>
+</div>
 
-<%= render 'form' %>
 
-<%= link_to 'Back', articles_path %>
