--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Hello, Rails!<h1>
-<%= link_to 'My Blog', articles_path %>
+<div class="blog-header text-center">
+<h1 class="blog-title">Rails Blog</h1>
+    <p class="lead blog-description">Welcome to my first rails application!</p>
+    <p><%= link_to 'View All Articles', articles_path, class: 'btn btn-lg btn-primary' %></p>
+    <p><%= link_to 'Create New Article', new_article_path, class: 'btn btn-lg btn-success' %></p>
+</div>
+
