--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -10,7 +10,7 @@
     <div class="blog-post">
       <h2 class="blog-post-title"><%= article.title %></h2>
 
-      <p class="blog-post-meta"><%= article.created_at.to_s(:created_on) %> by <a href="#">Mark</a></p>
+      <p class="blog-post-meta"><%= article.created_at.to_s(:created_on) %> by <%= article.user.email.split('@')[0].capitalize %></p>
       <p><%= truncate(article.text, length: 20, omission: '...') %></p>
       <p><%= link_to 'Read More', article %></p>
       
