--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,11 +1,11 @@
 <div class="blog-header text-center">
-<h1 class="blog-title">Rails Blog</h1>
+<h1 class="blog-title">A Literary Journey</h1>
 
     <p class="lead blog-description">
         <% if user_signed_in? %>
         Hi <%= current_user.email %>!
         <% end %>
-        Welcome to my first rails application!
+        Please enjoy these excerpts of great reads!
     </p>
     <p><%= link_to 'View All Articles', articles_path, class: 'btn btn-lg btn-primary' %></p>
     <p><%= link_to 'Create New Article', new_article_path, class: 'btn btn-lg btn-success' %></p>
