Change welcome buttons

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,7 +7,7 @@
         <% end %>
         Please enjoy these excerpts of great reads!
     </p>
-    <p><%= link_to 'View All Articles', articles_path, class: 'btn btn-lg btn-primary' %></p>
-    <p><%= link_to 'Create New Article', new_article_path, class: 'btn btn-lg btn-success' %></p>
+    <p><%= link_to 'View All Excerpts', articles_path, class: 'btn btn-lg btn-primary' %></p>
+    <p><%= link_to 'Create New Excerpt', new_article_path, class: 'btn btn-lg btn-success' %></p>
 </div>
 
