--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,36 +1,41 @@
 <%= form_for @article, html: { multipart: true } do |f| %>
- 
-  <% if @article.errors.any? %>
-    <div id="error_explanation">
-      <h2>
-        <%= pluralize(@article.errors.count, "error") %> prohibited
-        this article from being saved:
-      </h2>
-      <ul>
-        <% @article.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
- 
-  <div class="form-group">
-    <%= f.label :title %><br>
-    <%= f.text_field :title, class: 'form-control' %>
-  </div>
- 
-  <div class="form-group">
-    <%= f.label :text %><br>
-    <%= f.text_area :text, class: 'form-control' %>
-  </div>
 
-  <div class="form-group">
-    <%= f.label :image %><br>
-    <%= f.file_field :image %>
-  </div>
- 
-  <p>
-    <%= f.submit 'Submit Article', class:'btn btn-default' %>
-  </p>
- 
+<% if @article.errors.any? %>
+<div id="error_explanation">
+  <h2>
+    <%= pluralize(@article.errors.count, "error") %> prohibited
+    this article from being saved:
+  </h2>
+  <ul>
+    <% @article.errors.full_messages.each do |msg| %>
+    <li><%= msg %></li>
+    <% end %>
+  </ul>
+</div>
+<% end %>
+
+<div class="form-group">
+  <%= f.label :title %><br>
+  <%= f.text_field :title, class: 'form-control' %>
+</div>
+
+<div class="form-group">
+  <%= f.label :text %><br>
+  <%= f.text_area :text, class: 'form-control' %>
+</div>
+
+<div class="form-group">
+  <%= f.label :address %><br>
+  <%= f.text_field :address, class: "form-control" %>
+</div>
+
+<div class="form-group">
+  <%= f.label :image %><br>
+  <%= f.file_field :image %>
+</div>
+
+<p>
+  <%= f.submit 'Submit Article', class:'btn btn-default' %>
+</p>
+
 <% end %>
