--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -12,6 +12,8 @@
             </p>
             <p><%= image_tag @article.image.url(:medium) %>
             </p>
+            <h4><%= @article.address %></h4>
+            <div id="map-canvas"></div>
             <hr>
             <% if current_user == @article.user %>
             <%= link_to 'Edit', edit_article_path(@article), class: 'btn btn-warning' %>
@@ -28,3 +30,7 @@
         </div>
     </div>
 </div>
+<%= javascript_tag do %>
+   latitude = '<%= j @article.latitude.to_s %>';
+   longitude = '<%= j @article.longitude.to_s %>';
+<% end %>
