--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
-<div class="blog-header text-center">
-<h1 class="blog-title">A Literary Journey</h1>
+<div id="welcome" class="blog-header text-center">
+<h1 id="main" class="blog-title">A Literary Journey</h1>
 
     <p class="lead blog-description">
         <% if user_signed_in? %>
